[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riemann-sum"
version = "0.1.0"
authors = [
  { name="Jacob Lee", email="Jacob.J.Lee@outlook.com" },
]
description = "A package for computing Riemann summations"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/JacobLee23/riemann-sum"

[tools.setuptools.packages.find]
where = ["."]
include = ["riemann"]
exluce = [
  "riemann.tests.*",
  "docs.*"
]
